# seo-automation

./: .gitignore  README.md  _config.yml  privacy_policy.md  pyproject.toml
.streamlit/: secrets.toml.example
docs/: index.md  privacy-policy.md  privacy_policy.md
scripts/: format.sh
src/: auth.py  main.py
src/components/: __init__.py  card.py  gsheet.py  images.py  status.py
src/pages/: gsheet_detect_language.py  gsheet_highlight_rows.py  home.py
src/utils/: __init__.py  gsheet.py
